Ticket #28100: Fixed mistake, where the button wasn't aligned to the left end of the sidebar when sidebar width was getting smaller.

--- a/com.top_logic.themes.modern/src/main/webapp/style/buttons.css
+++ b/com.top_logic.themes.modern/src/main/webapp/style/buttons.css
@@ -470,18 +470,11 @@ a.input-image.cannot-edit {
 }
 
 .tlButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  height: 2rem;
-  cursor: pointer;
+	height: 2rem;
+	cursor: pointer;
 }
 
 .tlButton h4 {
-  font-size: 9pt;
-}
-
-.tlButton.tlUser a.accEntry {
-    flex-grow: 2;
+	font-size: 9pt;
+	margin: 0;
 }
